force-app/main/default/objects/Training_Events__c/Training_Events__c.object-meta.xml
<CustomObject>
    <label>Training Event</label>
    <nameField>
        <displayFormat>TE-{000000}</displayFormat>
        <label>Training Events Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Training Event</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>