force-app/main/default/objects/Training_Events__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Training Events</relationshipLabel>
    <relationshipName>Training_Event</relationshipName>
    <type>Lookup</type>
</CustomField>