force-app/main/default/objects/Training_Events__c/fields/Actual_Attendance__c.field-meta.xml
<CustomField>
    <fullName>Actual_Attendance__c</fullName>
    <label>Actual Attendance</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>