force-app/main/default/objects/Training_Events__c/fields/Actual_of_Students__c.field-meta.xml
<CustomField>
    <fullName>Actual_of_Students__c</fullName>
    <label>Actual # of Students</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>