force-app/main/default/objects/Training_Events__c/fields/Additional_Videos__c.field-meta.xml
<CustomField>
    <fullName>Additional_Videos__c</fullName>
    <label>Additional Videos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>