force-app/main/default/objects/Training_Events__c/fields/Alterations_to_skills_due_to_state_local__c.field-meta.xml
<CustomField>
    <fullName>Alterations_to_skills_due_to_state_local__c</fullName>
    <label>Alterations to skills due to state/local</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>