force-app/main/default/objects/Training_Events__c/fields/Announced_to_Management__c.field-meta.xml
<CustomField>
    <fullName>Announced_to_Management__c</fullName>
    <label>Announced to Management</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>