force-app/main/default/objects/Training_Events__c/fields/BGST_Indicator__c.field-meta.xml
<CustomField>
    <fullName>BGST_Indicator__c</fullName>
    <formula>Opportunity__r.BGST_Rep__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BGST Indicator</label>
    <type>Checkbox</type>
</CustomField>