force-app/main/default/objects/Training_Events__c/fields/BGST_Rep_Email__c.field-meta.xml
<CustomField>
    <fullName>BGST_Rep_Email__c</fullName>
    <formula>Opportunity__r.BGST_Rep_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BGST Rep Email</label>
    <type>Text</type>
</CustomField>