force-app/main/default/objects/Training_Events__c/fields/Billed_As__c.field-meta.xml
<CustomField>
    <fullName>Billed_As__c</fullName>
    <label>Billed As:</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Per Service</fullName>
            </value>
            <value>
                <fullName>Per Agreement</fullName>
            </value>
            <value>
                <fullName>Per Agreement, Final</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>