force-app/main/default/objects/Training_Events__c/fields/Billing_Account__c.field-meta.xml
<CustomField>
    <fullName>Billing_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Training Event (Multi-Jurisdictional Account)</relationshipLabel>
    <relationshipName>Training_Event1</relationshipName>
    <type>Lookup</type>
</CustomField>