force-app/main/default/objects/Training_Events__c/fields/BL_Info_Sent_to_Customer__c.field-meta.xml
<CustomField>
    <fullName>BL_Info_Sent_to_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BL Info Sent to Customer</label>
    <type>Checkbox</type>
</CustomField>