force-app/main/default/objects/Training_Events__c/fields/Break_Times__c.field-meta.xml
<CustomField>
    <fullName>Break_Times__c</fullName>
    <label>Break Times</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>10m</fullName>
            </value>
            <value>
                <fullName>15m</fullName>
            </value>
            <value>
                <fullName>20m</fullName>
            </value>
            <value>
                <fullName>30m</fullName>
            </value>
            <value>
                <fullName>40m</fullName>
            </value>
            <value>
                <fullName>45m</fullName>
            </value>
            <value>
                <fullName>50m</fullName>
            </value>
            <value>
                <fullName>60m</fullName>
            </value>
            <value>
                <fullName>70m</fullName>
            </value>
            <value>
                <fullName>75m</fullName>
            </value>
            <value>
                <fullName>80m</fullName>
            </value>
            <value>
                <fullName>90m</fullName>
            </value>
            <value>
                <fullName>100m</fullName>
            </value>
            <value>
                <fullName>105m</fullName>
            </value>
            <value>
                <fullName>110m</fullName>
            </value>
            <value>
                <fullName>120m</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>