force-app/main/default/objects/Training_Events__c/fields/CC_Order__c.field-meta.xml
<CustomField>
    <fullName>CC_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>CC Order related to TE</inlineHelpText>
    <label>CC Order</label>
    <referenceTo>ccrz__E_Order__c</referenceTo>
    <relationshipLabel>Training Event</relationshipLabel>
    <relationshipName>Training_Event</relationshipName>
    <type>Lookup</type>
</CustomField>