force-app/main/default/objects/Training_Events__c/fields/CC_Order_Item__c.field-meta.xml
<CustomField>
    <fullName>CC_Order_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>CC Order Item Related to the TE</inlineHelpText>
    <label>CC Order Item</label>
    <referenceTo>ccrz__E_OrderItem__c</referenceTo>
    <relationshipLabel>Training Event</relationshipLabel>
    <relationshipName>Training_Event</relationshipName>
    <type>Lookup</type>
</CustomField>