force-app/main/default/objects/Training_Events__c/fields/Champs_Set_up_Complete__c.field-meta.xml
<CustomField>
    <fullName>Champs_Set_up_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In CHAMP</label>
    <type>Checkbox</type>
</CustomField>