force-app/main/default/objects/Training_Events__c/fields/Close_Date_to_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Close_Date_to_Scheduled__c</fullName>
    <formula>(Completed_Date__c -    Opportunity__r.Closed_Won_Date__c   )*24</formula>
    <label>Close Date to Scheduled</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>