force-app/main/default/objects/Training_Events__c/fields/Close_Date_to_TE__c.field-meta.xml
<CustomField>
    <fullName>Close_Date_to_TE__c</fullName>
    <formula>Start_Date__c-Opportunity__r.CloseDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Close Date to TE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>