force-app/main/default/objects/Training_Events__c/fields/Combined_Event__c.field-meta.xml
<CustomField>
    <fullName>Combined_Event__c</fullName>
    <label>Combined Event?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes – In-service</fullName>
            </value>
            <value>
                <fullName>Yes – EAP Drill</fullName>
            </value>
            <value>
                <fullName>Yes – Multiple services</fullName>
            </value>
            <value>
                <fullName>Yes – Other, see special instructions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>