force-app/main/default/objects/Training_Events__c/fields/County__c.field-meta.xml
<CustomField>
    <fullName>County__c</fullName>
    <label>County</label>
    <length>250</length>
    <type>Text</type>
</CustomField>