force-app/main/default/objects/Training_Events__c/fields/Course_Catalog__c.field-meta.xml
<CustomField>
    <fullName>Course_Catalog__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Course Catalog</label>
    <referenceTo>Course_Catalog__c</referenceTo>
    <relationshipLabel>Training Event</relationshipLabel>
    <relationshipName>Training_Event</relationshipName>
    <type>Lookup</type>
</CustomField>