force-app/main/default/objects/Training_Events__c/fields/Course_ID_1__c.field-meta.xml
<CustomField>
    <fullName>Course_ID_1__c</fullName>
    <formula>CC_Order_Item__r.ccrz__Product__r.ccrz__SKU__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Course ID</label>
    <type>Text</type>
</CustomField>