force-app/main/default/objects/Training_Events__c/fields/Course_ID__c.field-meta.xml
<CustomField>
    <fullName>Course_ID__c</fullName>
    <inlineHelpText>HSSSFA107 - Adult CPR/AED
HSSFA207 - Pediatric CPR/AED:
HSSSFA303 - Adult and Pediatric CPR/AED
HSSSFA404 - Adult CPR/AED and First Aid
HSSSFA415 - Adult and Pediatric</inlineHelpText>
    <label>Course ID</label>
    <length>150</length>
    <type>Text</type>
</CustomField>