force-app/main/default/objects/Training_Events__c/fields/Course_Record_Processed_Date__c.field-meta.xml
<CustomField>
    <fullName>Course_Record_Processed_Date__c</fullName>
    <label>Course Record Processed Date</label>
    <type>DateTime</type>
</CustomField>