force-app/main/default/objects/Training_Events__c/fields/CRS__c.field-meta.xml
<CustomField>
    <fullName>CRS__c</fullName>
    <label>CRS #</label>
    <length>10</length>
    <type>Text</type>
</CustomField>