force-app/main/default/objects/Training_Events__c/fields/Customer_Contact_2__c.field-meta.xml
<CustomField>
    <fullName>Customer_Contact_2__c</fullName>
    <formula>IF(NOT (ISBLANK ( Local_Customer_Contact__c )),  Local_Customer_Contact__r.FirstName + &quot; &quot; + Local_Customer_Contact__r.LastName, IF (ISBLANK ( Local_Customer_Contact__c ), Customer_Contact__r.FirstName + &quot; &quot; +  Customer_Contact__r.LastName , NULL
) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Contact</label>
    <type>Text</type>
</CustomField>