force-app/main/default/objects/Training_Events__c/fields/Customer_Contact__c.field-meta.xml
<CustomField>
    <fullName>Customer_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Training Event (Customer Contact)</relationshipLabel>
    <relationshipName>Training_Event1</relationshipName>
    <type>Lookup</type>
</CustomField>