force-app/main/default/objects/Training_Events__c/fields/Date_of_TE_creation__c.field-meta.xml
<CustomField>
    <fullName>Date_of_TE_creation__c</fullName>
    <description>Used instead of standard Date/Time &quot;Created Date&quot; field</description>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date of TE creation</label>
    <type>Date</type>
</CustomField>