force-app/main/default/objects/Training_Events__c/fields/End_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Time__c</fullName>
    <label>End Time</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>08:00 AM</fullName>
            </value>
            <value>
                <fullName>08:15 AM</fullName>
            </value>
            <value>
                <fullName>08:30 AM</fullName>
            </value>
            <value>
                <fullName>08:45 AM</fullName>
            </value>
            <value>
                <fullName>09:00 AM</fullName>
            </value>
            <value>
                <fullName>09:15 AM</fullName>
            </value>
            <value>
                <fullName>09:30 AM</fullName>
            </value>
            <value>
                <fullName>09:45 AM</fullName>
            </value>
            <value>
                <fullName>10:00 AM</fullName>
            </value>
            <value>
                <fullName>10:15 AM</fullName>
            </value>
            <value>
                <fullName>10:30 AM</fullName>
            </value>
            <value>
                <fullName>10:45 AM</fullName>
            </value>
            <value>
                <fullName>11:00 AM</fullName>
            </value>
            <value>
                <fullName>11:15 AM</fullName>
            </value>
            <value>
                <fullName>11:30 AM</fullName>
            </value>
            <value>
                <fullName>11:45 AM</fullName>
            </value>
            <value>
                <fullName>12:00 PM</fullName>
            </value>
            <value>
                <fullName>12:15 PM</fullName>
            </value>
            <value>
                <fullName>12:30 PM</fullName>
            </value>
            <value>
                <fullName>12:45 PM</fullName>
            </value>
            <value>
                <fullName>01:00 PM</fullName>
            </value>
            <value>
                <fullName>01:15 PM</fullName>
            </value>
            <value>
                <fullName>01:30 PM</fullName>
            </value>
            <value>
                <fullName>01:45 PM</fullName>
            </value>
            <value>
                <fullName>02:00 PM</fullName>
            </value>
            <value>
                <fullName>02:15 PM</fullName>
            </value>
            <value>
                <fullName>02:30 PM</fullName>
            </value>
            <value>
                <fullName>02:45 PM</fullName>
            </value>
            <value>
                <fullName>03:00 PM</fullName>
            </value>
            <value>
                <fullName>03:15 PM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>