force-app/main/default/objects/Training_Events__c/fields/Entry_Method__c.field-meta.xml
<CustomField>
    <fullName>Entry_Method__c</fullName>
    <label>Entry Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pool pass provided</fullName>
            </value>
            <value>
                <fullName>Pay cash – client reimbursement</fullName>
            </value>
            <value>
                <fullName>Pay cash – no client reimbursement</fullName>
            </value>
            <value>
                <fullName>Other – see special instructions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>