force-app/main/default/objects/Training_Events__c/fields/Equipment__c.field-meta.xml
<CustomField>
    <fullName>Equipment__c</fullName>
    <label>Equipment</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DVD and TV on site</fullName>
            </value>
            <value>
                <fullName>AV Equipment and Computer On Site</fullName>
            </value>
            <value>
                <fullName>AV Equipment with Computer Hookup</fullName>
            </value>
            <value>
                <fullName>TV Only no computer hookup</fullName>
            </value>
            <value>
                <fullName>No AV Equipment on site</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>