force-app/main/default/objects/Training_Events__c/fields/Est_Training_Event_Amount__c.field-meta.xml
<CustomField>
    <fullName>Est_Training_Event_Amount__c</fullName>
    <formula>Number_in_Class__c * Opportunity__r.Est_Price_per_Attendee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Est. Training Event Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>