force-app/main/default/objects/Training_Events__c/fields/Facility_Address_1__c.field-meta.xml
<CustomField>
    <fullName>Facility_Address_1__c</fullName>
    <label>Facility Address 1</label>
    <length>75</length>
    <type>Text</type>
</CustomField>