force-app/main/default/objects/Training_Events__c/fields/Facility_Name__c.field-meta.xml
<CustomField>
    <fullName>Facility_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Facility Name</label>
    <referenceTo>Facility__c</referenceTo>
    <relationshipLabel>Training Event</relationshipLabel>
    <relationshipName>Training_Event</relationshipName>
    <type>Lookup</type>
</CustomField>