force-app/main/default/objects/Training_Events__c/fields/Facility_Type__c.field-meta.xml
<CustomField>
    <fullName>Facility_Type__c</fullName>
    <label>Facility Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Waterpark</fullName>
            </value>
            <value>
                <fullName>Waterfront</fullName>
            </value>
            <value>
                <fullName>Pool</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>