force-app/main/default/objects/Training_Events__c/fields/Facility_Zip__c.field-meta.xml
<CustomField>
    <fullName>Facility_Zip__c</fullName>
    <label>Facility Zip</label>
    <length>9</length>
    <type>Text</type>
</CustomField>