force-app/main/default/objects/Training_Events__c/fields/Final_Service__c.field-meta.xml
<CustomField>
    <fullName>Final_Service__c</fullName>
    <label>Final Service?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>