force-app/main/default/objects/Training_Events__c/fields/FS_Licensing_Customer__c.field-meta.xml
<CustomField>
    <fullName>FS_Licensing_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FS Licensing Customer</label>
    <type>Checkbox</type>
</CustomField>