force-app/main/default/objects/Training_Events__c/fields/In_Discussion_Customer_Hold_Date__c.field-meta.xml
<CustomField>
    <fullName>In_Discussion_Customer_Hold_Date__c</fullName>
    <label>In Discussion - Customer Hold Date</label>
    <type>DateTime</type>
</CustomField>