force-app/main/default/objects/Training_Events__c/fields/Instructor_1__c.field-meta.xml
<CustomField>
    <fullName>Instructor_1__c</fullName>
    <label>Instructor 1</label>
    <type>TextArea</type>
</CustomField>