force-app/main/default/objects/Training_Events__c/fields/Is_Completed_Date_Updated__c.field-meta.xml
<CustomField>
    <fullName>Is_Completed_Date_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To prevent Updating Completed Date more than one time.</description>
    <label>Is Completed Date Updated</label>
    <type>Checkbox</type>
</CustomField>