force-app/main/default/objects/Training_Events__c/fields/Last_Date_for_a_Site_Visit__c.field-meta.xml
<CustomField>
    <fullName>Last_Date_for_a_Site_Visit__c</fullName>
    <label>Last Date for a Site Visit</label>
    <type>Date</type>
</CustomField>