force-app/main/default/objects/Training_Events__c/fields/LMS_Org_ID__c.field-meta.xml
<CustomField>
    <fullName>LMS_Org_ID__c</fullName>
    <formula>Opportunity__r.LMS_Org_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LMS Org ID</label>
    <type>Text</type>
</CustomField>