force-app/main/default/objects/Training_Events__c/fields/Local_Customer_Contact__c.field-meta.xml
<CustomField>
    <fullName>Local_Customer_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Local Customer Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Training Event (Local Customer Contact)</relationshipLabel>
    <relationshipName>Training_Event2</relationshipName>
    <type>Lookup</type>
</CustomField>