force-app/main/default/objects/Training_Events__c/fields/Max_Course_Catalog_Students__c.field-meta.xml
<CustomField>
    <fullName>Max_Course_Catalog_Students__c</fullName>
    <formula>IF
(Number_of_Instructors__c&lt;=0,
Course_Catalog__r.Number_of_Students__c,
Number_of_Instructors__c*Course_Catalog__r.Number_of_Students__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Max number of students based on Course Catalog and Number of Instructors on TE</inlineHelpText>
    <label>Max Course Catalog Students</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>