force-app/main/default/objects/Training_Events__c/fields/Multi_Jurisdictional_Local_Billing_Type__c.field-meta.xml
<CustomField>
    <fullName>Multi_Jurisdictional_Local_Billing_Type__c</fullName>
    <formula>IF(AND(
 ISPICKVAL(Opportunity__r.Multi_Jurisdictional__c , &#39;Yes&#39;),
 OR(
 ISPICKVAL(Opportunity__r.Multi_Jurisdictional_Type__c, &#39;Single POC, Local Billing&#39; ),
 ISPICKVAL(Opportunity__r.Multi_Jurisdictional_Type__c, &#39;Local POC, Local Billing&#39;))), IMAGE(&quot;/img/samples/flag_red.gif&quot;,&quot;red&quot;,15,15), IMAGE(&quot;/img/samples/flag_green.gif&quot;,&quot;green&quot;,15,15) )</formula>
    <inlineHelpText>If Flag is red, please Verify Local Billing Account</inlineHelpText>
    <label>Multi-Jurisdictional Local Billing Type</label>
    <type>Text</type>
</CustomField>