force-app/main/default/objects/Training_Events__c/fields/NAT_Types__c.field-meta.xml
<CustomField>
    <fullName>NAT_Types__c</fullName>
    <label>NAT Types</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Nurse Assistant Testing</fullName>
            </value>
            <value>
                <fullName>Nurse Assistant Training</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>