force-app/main/default/objects/Training_Events__c/fields/Number_in_Class__c.field-meta.xml
<CustomField>
    <fullName>Number_in_Class__c</fullName>
    <label>Number in Class</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>