force-app/main/default/objects/Training_Events__c/fields/Number_of_Examiners__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Examiners__c</fullName>
    <label>Number of Examiners</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>