force-app/main/default/objects/Training_Events__c/fields/of_Days_from_Closed_Won_to_TE_Created__c.field-meta.xml
<CustomField>
    <fullName>of_Days_from_Closed_Won_to_TE_Created__c</fullName>
    <formula>Date_of_TE_creation__c -  Opportunity__r.CloseDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># of Days from Closed Won to TE Created</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>