force-app/main/default/objects/Training_Events__c/fields/Pre_Approval__c.field-meta.xml
<CustomField>
    <fullName>Pre_Approval__c</fullName>
    <label>Pre-Approval</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Guaranteed Date</fullName>
            </value>
            <value>
                <fullName>Non-Standard Course</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>