force-app/main/default/objects/Training_Events__c/fields/Quantity_1__c.field-meta.xml
<CustomField>
    <fullName>Quantity_1__c</fullName>
    <description>Quantity of Classes that have been ordered</description>
    <inlineHelpText>Quantity of Classes that have been ordered</inlineHelpText>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>