force-app/main/default/objects/Training_Events__c/fields/Report_Completed__c.field-meta.xml
<CustomField>
    <fullName>Report_Completed__c</fullName>
    <label>Report Completed</label>
    <type>Date</type>
</CustomField>