force-app/main/default/objects/Training_Events__c/fields/Report_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Report_Sent_Date__c</fullName>
    <label>Report Sent Date</label>
    <type>Date</type>
</CustomField>