force-app/main/default/objects/Training_Events__c/fields/Rescheduling_Date__c.field-meta.xml
<CustomField>
    <fullName>Rescheduling_Date__c</fullName>
    <label>Rescheduling Date</label>
    <type>DateTime</type>
</CustomField>