force-app/main/default/objects/Training_Events__c/fields/Rescheduling_Fee__c.field-meta.xml
<CustomField>
    <fullName>Rescheduling_Fee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rescheduling Fee?</label>
    <type>Checkbox</type>
</CustomField>