force-app/main/default/objects/Training_Events__c/fields/Returned_to_Sales__c.field-meta.xml
<CustomField>
    <fullName>Returned_to_Sales__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Returned to Sales</label>
    <type>Checkbox</type>
</CustomField>