force-app/main/default/objects/Training_Events__c/fields/Saba_Order__c.field-meta.xml
<CustomField>
    <fullName>Saba_Order__c</fullName>
    <label>Saba Order #</label>
    <length>140</length>
    <type>Text</type>
</CustomField>