force-app/main/default/objects/Training_Events__c/fields/SCC_Code__c.field-meta.xml
<CustomField>
    <fullName>SCC_Code__c</fullName>
    <label>SCC Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>