force-app/main/default/objects/Training_Events__c/fields/Scheduling_Complete__c.field-meta.xml
<CustomField>
    <fullName>Scheduling_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Scheduling Complete</label>
    <type>Checkbox</type>
</CustomField>