force-app/main/default/objects/Training_Events__c/fields/Send_Class_Certs_to_POC__c.field-meta.xml
<CustomField>
    <fullName>Send_Class_Certs_to_POC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Class Certs to POC</label>
    <type>Checkbox</type>
</CustomField>