force-app/main/default/objects/Training_Events__c/fields/Sent_Addendum_Date__c.field-meta.xml
<CustomField>
    <fullName>Sent_Addendum_Date__c</fullName>
    <label>Sent Addendum Date</label>
    <type>DateTime</type>
</CustomField>